VariationHandling/JES_files/2016_preVFP/Histo_1000_TTTo2L2Nu_boostedShiftedSrc4Up.err
[8MB/455.3MB][  1%][>                                                 ][1.333MB/s]  [16MB/455.3MB][  3%][=>                                                ][1.778MB/s]  [24MB/455.3MB][  5%][==>                                               ][1.846MB/s]  [32MB/455.3MB][  7%][===>                                              ][2MB/s]  [40MB/455.3MB][  8%][====>                                             ][2.105MB/s]  [48MB/455.3MB][ 10%][=====>                                            ][2.087MB/s]  [56MB/455.3MB][ 12%][======>                                           ][2.154MB/s]  [64MB/455.3MB][ 14%][=======>                                          ][2.207MB/s]  [72MB/455.3MB][ 15%][=======>                                          ][2.25MB/s]  [80MB/455.3MB][ 17%][========>                                         ][2.424MB/s]  [88MB/455.3MB][ 19%][=========>                                        ][2.514MB/s]  [96MB/455.3MB][ 21%][==========>                                       ][2.595MB/s]  [104MB/455.3MB][ 22%][===========>                                      ][2.667MB/s]  [112MB/455.3MB][ 24%][============>                                     ][2.732MB/s]  [120MB/455.3MB][ 26%][=============>                                    ][2.727MB/s]  [128MB/455.3MB][ 28%][==============>                                   ][2.723MB/s]  [136MB/455.3MB][ 29%][==============>                                   ][2.776MB/s]  [144MB/455.3MB][ 31%][===============>                                  ][2.769MB/s]  [152MB/455.3MB][ 33%][================>                                 ][2.764MB/s]  [160MB/455.3MB][ 35%][=================>                                ][2.759MB/s]  [168MB/455.3MB][ 36%][==================>                               ][2.71MB/s]  [176MB/455.3MB][ 38%][===================>                              ][2.708MB/s]  [184MB/455.3MB][ 40%][====================>                             ][2.706MB/s]  [192MB/455.3MB][ 42%][=====================>                            ][2.704MB/s]  [200MB/455.3MB][ 43%][=====================>                            ][2.74MB/s]  [208MB/455.3MB][ 45%][======================>                           ][2.737MB/s]  [216MB/455.3MB][ 47%][=======================>                          ][2.769MB/s]  [224MB/455.3MB][ 49%][========================>                         ][2.765MB/s]  [232MB/455.3MB][ 50%][=========================>                        ][2.795MB/s]  [240MB/455.3MB][ 52%][==========================>                       ][2.791MB/s]  [248MB/455.3MB][ 54%][===========================>                      ][2.787MB/s]  [256MB/455.3MB][ 56%][============================>                     ][2.783MB/s]  [264MB/455.3MB][ 57%][============================>                     ][2.779MB/s]  [272MB/455.3MB][ 59%][=============================>                    ][2.747MB/s]  [280MB/455.3MB][ 61%][==============================>                   ][2.745MB/s]  [288MB/455.3MB][ 63%][===============================>                  ][2.717MB/s]  [296MB/455.3MB][ 65%][================================>                 ][2.691MB/s]  [304MB/455.3MB][ 66%][=================================>                ][2.69MB/s]  [312MB/455.3MB][ 68%][==================================>               ][2.69MB/s]  [320MB/455.3MB][ 70%][===================================>              ][2.689MB/s]  [328MB/455.3MB][ 72%][====================================>             ][2.689MB/s]  [336MB/455.3MB][ 73%][====================================>             ][2.688MB/s]  [344MB/455.3MB][ 75%][=====================================>            ][2.709MB/s]  [352MB/455.3MB][ 77%][======================================>           ][2.708MB/s]  [360MB/455.3MB][ 79%][=======================================>          ][2.727MB/s]  [368MB/455.3MB][ 80%][========================================>         ][2.746MB/s]  [376MB/455.3MB][ 82%][=========================================>        ][2.765MB/s]  [384MB/455.3MB][ 84%][==========================================>       ][2.763MB/s]  [392MB/455.3MB][ 86%][===========================================>      ][2.78MB/s]  [400MB/455.3MB][ 87%][===========================================>      ][2.797MB/s]  [408MB/455.3MB][ 89%][============================================>     ][2.795MB/s]  [416MB/455.3MB][ 91%][=============================================>    ][2.811MB/s]  [424MB/455.3MB][ 93%][==============================================>   ][2.808MB/s]  [432MB/455.3MB][ 94%][===============================================>  ][2.824MB/s]  [440MB/455.3MB][ 96%][================================================> ][2.839MB/s]  [448MB/455.3MB][ 98%][=================================================>][2.835MB/s]  [455.3MB/455.3MB][100%][==================================================][2.846MB/s]  [455.3MB/455.3MB][100%][==================================================][2.846MB/s]  
In file included from input_line_8:1:
/pool/condor/dir_1312/FillHistograms_Extended_JES.C:244:70: warning: 'if' initialization statements are a C++17 extension [-Wc++17-extensions]
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                     ^
/pool/condor/dir_1312/FillHistograms_Extended_JES.C:244:71: error: expected expression
    if(recoCuts && revertBtag && tTaggerCut && (*bit)[triggerFloatCR];)
                                                                      ^
